--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URI=mongodb+srv://mario:test1234@mernapp.ad5fpaw.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb://mongo:vIANF2mlGw45MNTO3r0b@containers-us-west-50.railway.app:5802
 SECRET=ninjadojoshifuyoshimarioluigipeachbowser
